feat: expose announcements via /api/v1
